# solved-games

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  package-lock.json  package.json
data/: schema.md
data/games/: amazons-small.yaml  awari.yaml  checkers.yaml  connect-four.yaml  dobutsu-shogi.yaml  domineering.yaml  dots-and-boxes.yaml  fanorona.yaml  gardner-minichess.yaml  go-5x5.yaml  gomoku-freestyle.yaml  heads-up-limit-holdem.yaml  hex-7x7.yaml  hex-9x9.yaml  hexapawn.yaml  kalah.yaml  lasker-morris.yaml  losing-chess.yaml  maharajah-and-sepoys.yaml  morabaraba.yaml  mu-torere.yaml  nim.yaml  nine-mens-morris.yaml  othello.yaml  pentago.yaml  pentominoes.yaml  quarto.yaml  qubic.yaml  renju.yaml  sim.yaml  six-mens-morris.yaml  teeko.yaml  three-mens-morris.yaml  three-musketeers.yaml  tic-tac-toe.yaml  tigers-and-goats.yaml  wythoff-nim.yaml  y.yaml
docs/: 404.html  index.html  sitemap-0.xml  sitemap-index.xml
docs/_astro/: Search.astro_astro_type_script_index_0_lang.CgunPlxW.js  ui-core.DiGMhAYc.js
docs/explorer/: index.html  y.html
docs/frontier/: index.html
docs/pagefind/: pagefind-entry.json  pagefind.en_57e8248c35.pf_meta
engine/: Cargo.toml
engine/src/: dense_solve.rs  index.rs  lib.rs  reachable.rs
engine/tests/: three_mens_morris.rs  tic_tac_toe.rs  (+1 more)
explorer/: .gitignore  README.md  index.html  package-lock.json  package.json  test-engine.mjs  tsconfig.json  vite.config.ts  y.html
scripts/: build-readme.ts  build-site.ts
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
wasm/: Cargo.toml
wasm/src/: lib.rs
(+110 files in other folders)
