[package]
name = "game-solver-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings exposing the game-solver engine to the morris explorer."
license = "CC0-1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
game-solver = { path = "../engine" }

[profile.release]
opt-level = "s"
lto = true
